🐛 Stack lanes never retire, status converges, digest matching knows its repo
Retiring the worker on destroy opened a second-executor race and a
RejectedExecutionException wedge behind a queue-time deploying claim;
lanes are virtual threads now and simply persist. refreshStatus and
serviceStates run ON the lane (re-entrant), so a monitor tick can never
stomp a mid-operation status; status writes are one-column atomic
updates. status() sweeps owned containers by label and reports strays as
'orphaned' (never good), so a deleted service's container keeps the stack
degraded and the rename gate closed instead of reading inactive. Prune
runs BEFORE create (a renamed service's old container holds its host
ports), destroy sweeps networks and volumes by label, ensureImage
compares the hub-normalized REPO beside the digest (a same-digest image
under another repo failed create identically on every retry), and the
boot sweep runs on a virtual thread so a wedged daemon cannot hold the
proxy off the wire.